# duck_lineage

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  pyproject.toml  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_code_quality.yml  _extension_distribution.yml
src/: CMakeLists.txt  column_lineage_extractor.cpp  duck_lineage_extension.cpp  duck_lineage_optimizer.cpp  lineage_client.cpp  lineage_event_builder.cpp  lineage_utils.cpp  logical_lineage_sentinel.cpp  openlineage_extension.cpp  openlineage_optimizer.cpp  physical_lineage_sentinel.cpp
src/include/: column_lineage_extractor.hpp  duck_lineage_extension.hpp  duck_lineage_optimizer.hpp  lineage_client.hpp  lineage_event_builder.hpp  lineage_utils.hpp  logical_lineage_sentinel.hpp  openlineage_extension.hpp  openlineage_optimizer.hpp  physical_lineage_sentinel.hpp
test/: README.md  conftest.py  demo-example.sql  demo.sh  docker-compose.yml  event_helpers.py  marquez-config.yml  marquez.py
test/sql/: openlineage.test
test/tests/: __init__.py  test_advanced_queries.py  test_basic.py  test_column_lineage.py  test_column_lineage_extended.py  test_dataset_filtering.py  test_demo.py  test_ducklake.py  test_ducklake_postgres.py  test_error_handling.py  test_file_operations.py  test_lineage_events.py  test_performance.py  test_s3_path_namespace.py  test_views_and_ddl.py
